--- a/src/js/i18n/languages/en.json
+++ b/src/js/i18n/languages/en.json
@@ -143,11 +143,12 @@
   "ChargeGCError": " GC value must be between 1 and 999,999,999",
   "charge1BotNotification": "Enter the GC amount you want to charge for ANT: ",
   "chargeMultiBotNotification": "Enter the GC amount you want to charge for {{amount}} ANTs :",
-  "chargeAvailable": "Charge available",
+  "chargeAvailable": "Charge available: ",
   "chargeAllInput": "All charges",
   "campaign": "Campaign",
   "deleteCampaignConfirm": "Delete this campaign. \n Are you sure you want?",
   "menu.campaign": "Campaign",
+  "menu.customCampaign": "Create my logic",
   "txtFieldMaxSize": "The number of characters is limited to ",
   "txtFieldMinSize": "The minimum number of characters is 1",
   "theNameIsExist": "The name is exist.",
@@ -291,5 +292,28 @@
 
   "banUserContent1": "Access to this account is currently restricted.\nPlease contact the ",
   "banUserLink": "Support Portal",
-  "banUserContent2": " for details."
+  "banUserContent2": " for details.",
+  
+  "deleteBetPatternConfirm" : "Delete this bet pattern. \n Are you sure you want?",
+  "betPattern.numberCampaignUsed" : "Number of campaign used",
+  "betPattern.amountCampaign" : "{{amount}} campaigns",
+  "betPattern.numberBotUsed" : "Number of bot used",
+  "betPattern.amountBot" : "{{amount}} bots",
+  "betPattern.cannotDelete" : "Can't delete this bet pattern. \n It is in using by campaign!",
+  "customCampaign.listLogic": "Setting Logic",
+  "customCampaign.listBet": "Setting Bet Pattern",
+  "customCampaign.addALogicPattern": "Add a logic pattern",
+  "customCampaign.addABetPattern": "Add a bet pattern",
+  "customCampaign.logicPatternDetail": "Logic pattern detail",
+  "customCampaign.betPatternDetail": "Bet pattern detail",
+  "customCampaign.createLogic": "Create Logic",
+  "customCampaign.createBet": "Create Bet",
+  "customCampaign.logicName": "Logic",
+  "customCampaign.DeleteLogic": "Delete this logic. \n Are you sure you want?",
+  "customCampaign.canNotDelete": "Campaign is using this logic",
+  "customCampaign.description": "Description",
+  "customCampaign.cardNo": "Card No",
+  "help.descriptionLogicPattern": "help.descriptionLogicPattern",
+  "help.descriptionBetPattern": "help.descriptionBetPattern",
+  "help.cardNo": "ロジックの作成画面の「Card No」のHelpのテキストを教えていただければ、助かります。"
 }
