--- a/src/js/i18n/languages/ja.json
+++ b/src/js/i18n/languages/ja.json
@@ -187,6 +187,7 @@
   "campaign": "キャンペーン",
   "deleteCampaignConfirm": "このキャンペーンを削除します。\n本当によろしいですか？",
   "menu.campaign": "キャンペーン設定",
+  "menu.customCampaign": "マイロジック作成",
   "addCampaign": "キャンペーンを追加する",
   "campaignDetail": "キャンペーン詳細",
   "name": "キャンペーン名: ",
@@ -219,7 +220,7 @@
   "pleaseSaveField": "保存してください",
   "charge1BotNotification": "選択中のANTにチャージするGCを入力してください",
   "chargeMultiBotNotification": "選択中のANTにチャージするGCを入力してください",
-  "chargeAvailable": "利用可能",
+  "chargeAvailable": "利用可能: ",
   "chargeAllInput": "全額入力",
   "logicPattern": "ロジック: ",
   "chargeGcBot": "このANTに{{amount}}GCチャージしますよろしいですか？",
@@ -323,5 +324,28 @@
   "help.zeroMode2": "ゼロBET中はBETパターンが固定されます。\nゼロBETが発動した際、直前のBETサイドで固定され勝率を判定します。\n\nゼロBET中のBETサイドが固定されることにより、出目とBETパターンの流れが合わなかった所を回避します。\nただし、固定されたBETサイドによってはその後の出目と流れが合わず、ゼロBETが長引く場合もあります。",
   "banUserContent1": "このアカウントは何らからの理由により\n現在ご利用いただくことができません。\n詳しくは",
   "banUserLink": "LUC888サポート窓口",
-  "banUserContent2": "までお問い合わせください。"
+  "banUserContent2": "までお問い合わせください。",
+
+  "deleteBetPatternConfirm" : "Delete this bet pattern. \n Are you sure you want?",
+  "betPattern.numberCampaignUsed" : "使用キャンペーン数",
+  "betPattern.amountCampaign" : "{{amount}}件",
+  "betPattern.numberBotUsed" : "使用稼働中ANT数",
+  "betPattern.amountBot" : "{{amount}}台",
+  "betPattern.cannotDelete" : "Can't delete this bet pattern. \n It is in using by campaign!",
+  "customCampaign.listLogic": "ロジック設定",
+  "customCampaign.listBet": "BETパターン設定",
+  "customCampaign.addALogicPattern": "Add a logic pattern",
+  "customCampaign.addABetPattern": "Add a bet pattern",
+  "customCampaign.logicPatternDetail": "Logic pattern detail",
+  "customCampaign.betPatternDetail": "Bet pattern detail",
+  "customCampaign.createLogic": "Create Logic",
+  "customCampaign.createBet": "Create Bet",
+  "customCampaign.logicName": "ロジック ",
+  "customCampaign.DeleteLogic":"Delete this logic. \n Are you sure you want?",
+  "customCampaign.canNotDelete": "Campaign is using this logic",
+  "customCampaign.description": "Description",
+  "customCampaign.cardNo": "Card No",
+  "help.descriptionLogicPattern": "help.descriptionLogicPattern",
+  "help.descriptionBetPattern": "help.descriptionBetPattern",
+  "help.cardNo": "ロジックの作成画面の「Card No」のHelpのテキストを教えていただければ、助かります。"
 }
